Revert java 9 usage with java 8 equivalent (#40)
* Revert-Java-9-usage-with-Java-8-equivalent

Co-Authored-By: Jtfk <10415768+jtfk@users.noreply.github.com>

* Update ci.yml

Co-Authored-By: Jtfk <10415768+jtfk@users.noreply.github.com>

* remove unused import

* remove Revert-Java-9-usage from ci

---------

Co-authored-by: Jtfk <10415768+jtfk@users.noreply.github.com>