@@ -22,6 +22,7 @@ import org.schabi.newpipe.extractor.linkhandler.ListLinkHandler;
 import org.schabi.newpipe.extractor.utils.JsonUtils;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -67,7 +68,7 @@ public class BandcampCommentsExtractor extends CommentsExtractor {
 
         final String trackId = getTrackId();
         final String token = getNextPageToken(reviews);
-        return new InfoItemsPage<>(collector, new Page(List.of(trackId, token)));
+        return new InfoItemsPage<>(collector, new Page(Arrays.asList(trackId, token)));
     }
 
     @Override
@@ -92,7 +93,7 @@ public class BandcampCommentsExtractor extends CommentsExtractor {
         }
 
         return new InfoItemsPage<>(collector,
-                new Page(List.of(trackId, getNextPageToken(reviews))));
+                new Page(Arrays.asList(trackId, getNextPageToken(reviews))));
     }
 
     private JsonObject fetchReviewsData(final String trackId, final String token)
